--- a/WebPage.html
+++ b/WebPage.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:gray">
+<body>
 <title>Mina Gadallah</title>
-<head> Mina Gadallah </head>
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-<p align="middle">My web page is still under construction.</p>
+<body style="background-color:#A9D0F5">
+<img src="C:\Users\support.tech\Desktop\Mina WebPage\image\photo.jpg" align="right" alt="signature" style="width:400px;height:500px;">
+<h1 style="font-size:900%"> MINA</h1>
+
+<nav class="cl-effect-1">
+<ul class="nav1">
+<li><a class="scroll" href="#home">Home</a></li>
+<li><a class="scroll" href="#about">About</a></li>
+<li><a class="scroll" href="#portfolio">Projects</a></li>
+<li><a class="scroll" href="#services">Resume</a></li>
+<li><a class="scroll" href="#contact">Contact</a></li>
+</ul>
+</nav>
+
+
+
+
+
+<img src="C:\Users\support.tech\Desktop\Mina WebPage\image\signature.png" align="absmiddle" alt="signature" style="width:304px;height:228px;">
+
+
 
 </body>
 </html>
