--- a/WebPage.html
+++ b/WebPage.html
@@ -1,24 +1,52 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+   <meta charset='utf-8'>
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="styles.css">
+   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+   <script src="script.js"></script>
+
+
+
+
+
+</head>
+
 <body>
 <title>Mina Gadallah</title>
-<body style="background-color:#A9D0F5">
-<img src="C:\Users\support.tech\Desktop\Mina WebPage\image\photo.jpg" align="right" alt="signature" style="width:400px;height:500px;">
-<h1 style="font-size:900%"> MINA</h1>
+<body style="background-color:#CED8F6">
+<img src="C:\Users\support.tech\Desktop\Mina WebPage\image\banner.png" align="right" alt="signature" style="width:400px;height:700px;">
+<h1><font style="font-size:700%" face="verdana" color="darkblue">MINA</font></h1>
 
-<nav class="cl-effect-1">
-<ul class="nav1">
-<li><a class="scroll" href="#home">Home</a></li>
-<li><a class="scroll" href="#about">About</a></li>
-<li><a class="scroll" href="#portfolio">Projects</a></li>
-<li><a class="scroll" href="#services">Resume</a></li>
-<li><a class="scroll" href="#contact">Contact</a></li>
+
+
+
+<div id='cssmenu'>
+<ul>
+<li><a href='#'><span>Home</span></a></li>
+<li class='active has-sub'><a href='#'><span>Products</span></a>
+<ul>
+<li class='has-sub'><a href='#'><span>Product 1</span></a>
+<ul>
+<li><a href='#'><span>Sub Product</span></a></li>
+<li class='last'><a href='#'><span>Sub Product</span></a></li>
 </ul>
-</nav>
-
-
-
-
+</li>
+<li class='has-sub'><a href='#'><span>Product 2</span></a>
+<ul>
+<li><a href='#'><span>Sub Product</span></a></li>
+<li class='last'><a href='#'><span>Sub Product</span></a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href='#'><span>About</span></a></li>
+<li class='last'><a href='#'><span>Contact</span></a></li>
+</ul>
+</div>
 
 <img src="C:\Users\support.tech\Desktop\Mina WebPage\image\signature.png" align="absmiddle" alt="signature" style="width:304px;height:228px;">
 
