--- a/WebPage.html
+++ b/WebPage.html
@@ -10,16 +10,13 @@
    <script src="script.js"></script>
 
 
-
-
-
 </head>
 
 <body>
 <title>Mina Gadallah</title>
 <body style="background-color:#CED8F6">
 <img src="C:\Users\support.tech\Desktop\Mina WebPage\image\banner.png" align="right" alt="signature" style="width:400px;height:700px;">
-<h1><font style="font-size:700%" face="verdana" color="darkblue">MINA</font></h1>
+<h1><font style="font-size:500%" face="verdana" color="darkblue">MINA</font></h1>
 
 
 
@@ -27,26 +24,26 @@
 <div id='cssmenu'>
 <ul>
 <li><a href='#'><span>Home</span></a></li>
-<li class='active has-sub'><a href='#'><span>Products</span></a>
-<ul>
-<li class='has-sub'><a href='#'><span>Product 1</span></a>
-<ul>
-<li><a href='#'><span>Sub Product</span></a></li>
-<li class='last'><a href='#'><span>Sub Product</span></a></li>
-</ul>
-</li>
-<li class='has-sub'><a href='#'><span>Product 2</span></a>
-<ul>
-<li><a href='#'><span>Sub Product</span></a></li>
-<li class='last'><a href='#'><span>Sub Product</span></a></li>
-</ul>
-</li>
-</ul>
-</li>
+<li><a href='#'><span>Project</span></a></li>
 <li><a href='#'><span>About</span></a></li>
 <li class='last'><a href='#'><span>Contact</span></a></li>
 </ul>
 </div>
+<style>
+h2
+{
+	text-align: center;
+
+}
+</style>
+
+<h2><font style="font-size:200%" face="Consolas" color="black">About Me</font></h2>
+
+
+
+
+
+
 
 <img src="C:\Users\support.tech\Desktop\Mina WebPage\image\signature.png" align="absmiddle" alt="signature" style="width:304px;height:228px;">
 
