--- a/WebPage.html
+++ b/WebPage.html
@@ -29,16 +29,28 @@
 <li class='last'><a href='#'><span>Contact</span></a></li>
 </ul>
 </div>
+
+
 <style>
 h2
 {
+	bottom: 0;
+    right: 100px;
 	text-align: center;
 
 }
+
+div.fixed {
+    position: fixed;
+    bottom: 0;
+    center: -1;
+    width: 800px;
+
+}
 </style>
-
+<div class="fixed">
 <h2><font style="font-size:200%" face="Consolas" color="black">About Me</font></h2>
-
+</div>
 
 
 
@@ -46,6 +58,68 @@ h2
 
 
 <img src="C:\Users\support.tech\Desktop\Mina WebPage\image\signature.png" align="absmiddle" alt="signature" style="width:304px;height:228px;">
+
+
+
+<a href="#" class="scrollToTop">Scroll To Top</a>
+
+<style>
+.scrollToTop{
+	width:100px;
+	height:130px;
+	padding:10px;
+	text-align:center;
+	background: whiteSmoke;
+	font-weight: bold;
+	color: #444;
+	text-decoration: none;
+	position:fixed;
+	top:75px;
+	right:40px;
+	display:none;
+	background: url('arrow_up.png') no-repeat 0px 20px;
+}
+.scrollToTop:hover{
+	text-decoration:none;
+}
+
+</style>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- bottom side -->
+<style>
+#footer
+{
+   background-color:black;
+   color:white;
+   clear:both;
+   text-align:center;
+   padding:5px;
+}
+</style>
+
+<div id="footer">
+Copyright &copy; Mina Gadallah
+</div>
+
+
 
 
 
