--- a/WebPage.html
+++ b/WebPage.html
@@ -16,7 +16,8 @@
 <title>Mina Gadallah</title>
 <body style="background-color:#CED8F6">
 <img src="C:\Users\support.tech\Desktop\Mina WebPage\image\banner.png" align="right" alt="signature" style="width:400px;height:700px;">
-<h1><font style="font-size:500%" face="verdana" color="darkblue">MINA</font></h1>
+<style>h1{text-align: center;}</style>
+<h1><font style="font-size:500%" face="verdana"  color="black">MINA</font></h1>
 
 
 
@@ -32,19 +33,11 @@
 
 
 <style>
-h2
-{
-	bottom: 0;
-    right: 100px;
-	text-align: center;
-
-}
 
 div.fixed {
-    position: fixed;
-    bottom: 0;
-    center: -1;
-    width: 800px;
+
+    text-align: center;
+
 
 }
 </style>
