--- a/WebPage.html
+++ b/WebPage.html
@@ -13,6 +13,23 @@
 </head>
 
 <body>
+
+
+<style>
+#header {
+	position:static;
+    background-color:black;
+    color:white;
+    text-align:center;
+    padding:5px;
+}
+</style>
+<div id="header">
+<h1>MINA GADALLAH (under construction)</h1>
+</div>
+
+
+
 <title>Mina Gadallah</title>
 <body style="background-color:#CED8F6">
 <img src="C:\Users\support.tech\Desktop\Mina WebPage\image\banner.png" align="right" alt="signature" style="width:400px;height:700px;">
