--- a/WebPage.html
+++ b/WebPage.html
@@ -14,7 +14,7 @@
 
 <body>
 
-
+<!--
 <style>
 #header {
 	position:static;
@@ -28,25 +28,46 @@
 <h1>MINA GADALLAH (under construction)</h1>
 </div>
 
-
+Header contest -->
 
 <title>Mina Gadallah</title>
 <body style="background-color:#CED8F6">
 <img src="C:\Users\support.tech\Desktop\Mina WebPage\image\banner.png" align="right" alt="signature" style="width:400px;height:700px;">
-<style>h1{text-align: center;}</style>
+<style>h1{text-align: center;}p{text-align: center;}</style>
 <h1><font style="font-size:500%" face="verdana"  color="black">MINA</font></h1>
 
+<style>
+h5{
+     float: right;
+    margin-right: 190px;}
+</style>
+
+<h5>Hello World</h5>
 
 
 
+
+
+<p>Yo, My Name is Mina. Mina Gadallah</P>
+<P>Computer Science Student</p>
+<P>Dream Big. Work Hard. Stay Humble</p>
+<style>
+cssmenu{
+              float: right;
+    margin-right: 190px;}
+</style>
 <div id='cssmenu'>
 <ul>
 <li><a href='#'><span>Home</span></a></li>
 <li><a href='#'><span>Project</span></a></li>
+<li><a href='#'><span>R&eacute;sum&eacute;</span></a></li>
 <li><a href='#'><span>About</span></a></li>
 <li class='last'><a href='#'><span>Contact</span></a></li>
 </ul>
 </div>
+
+
+
 
 
 <style>
@@ -54,6 +75,8 @@
 div.fixed {
 
     text-align: center;
+    float: top;
+    margin-top: 190px;
 
 
 }
@@ -71,7 +94,7 @@ div.fixed {
 
 
 
-<a href="#" class="scrollToTop">Scroll To Top</a>
+<a href="#" class="scrollToTop"><img src="C:\Users\support.tech\Desktop\Mina WebPage\image\up.png"></a>
 
 <style>
 .scrollToTop{
@@ -84,10 +107,10 @@ div.fixed {
 	color: #444;
 	text-decoration: none;
 	position:fixed;
-	top:75px;
+	top:550px;
 	right:40px;
 	display:none;
-	background: url('arrow_up.png') no-repeat 0px 20px;
+	background: url('up.png') no-repeat 0px 20px;
 }
 .scrollToTop:hover{
 	text-decoration:none;
