--- a/WebPage.html
+++ b/WebPage.html
@@ -8,54 +8,36 @@
    <link rel="stylesheet" href="styles.css">
    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
    <script src="script.js"></script>
-
-
 </head>
 
 <body>
 
-<!--
+<!-------------------------BLACK HEADER------------------------------------->
 <style>
-#header {
+#header
+{
 	position:static;
     background-color:black;
     color:white;
     text-align:center;
-    padding:5px;
+    font-size:200%;
+    font-style: italic;
+    font-family:Georgia;
+    padding:10px;
 }
 </style>
 <div id="header">
-<h1>MINA GADALLAH (under construction)</h1>
+<header>MINA GADALLAH (under construction)</header>
 </div>
 
-Header contest -->
-
+<!-------------------------LAY OUT------------------------------------->
 <title>Mina Gadallah</title>
-<body style="background-color:#CED8F6">
-<img src="C:\Users\support.tech\Desktop\Mina WebPage\image\banner.png" align="right" alt="signature" style="width:400px;height:700px;">
-<style>h1{text-align: center;}p{text-align: center;}</style>
+<body style="background-color:#E9F2F5">
+<img src="C:\Users\support.tech\Desktop\Mina WebPage\image\mina 2.JPG"  alt="signature" style="float:right;margin-right: 100px;float:top;margin-top: 50px;width:400px;height:600px;">
+<style>h1{text-align: left;}</style>
 <h1><font style="font-size:500%" face="verdana"  color="black">MINA</font></h1>
 
-<style>
-h5{
-     float: right;
-    margin-right: 190px;}
-</style>
-
-<h5>Hello World</h5>
-
-
-
-
-
-<p>Yo, My Name is Mina. Mina Gadallah</P>
-<P>Computer Science Student</p>
-<P>Dream Big. Work Hard. Stay Humble</p>
-<style>
-cssmenu{
-              float: right;
-    margin-right: 190px;}
-</style>
+<!-------------------------Menu BAR------------------------------------->
 <div id='cssmenu'>
 <ul>
 <li><a href='#'><span>Home</span></a></li>
@@ -66,38 +48,27 @@ cssmenu{
 </ul>
 </div>
 
-
-
-
-
+<!-------------------------PAGE1 ABOUT ME------------------------------------->
 <style>
-
-div.fixed {
-
+div.fixed
+{
     text-align: center;
     float: top;
     margin-top: 190px;
-
-
 }
 </style>
 <div class="fixed">
 <h2><font style="font-size:200%" face="Consolas" color="black">About Me</font></h2>
 </div>
 
-
-
-
-
-
+<!-------------------------Signature Image------------------------------------->
 <img src="C:\Users\support.tech\Desktop\Mina WebPage\image\signature.png" align="absmiddle" alt="signature" style="width:304px;height:228px;">
 
-
-
+<!-------------------------Scroll Top Function------------------------------------->
 <a href="#" class="scrollToTop"><img src="C:\Users\support.tech\Desktop\Mina WebPage\image\up.png"></a>
-
 <style>
-.scrollToTop{
+.scrollToTop
+{
 	width:100px;
 	height:130px;
 	padding:10px;
@@ -112,31 +83,13 @@ div.fixed {
 	display:none;
 	background: url('up.png') no-repeat 0px 20px;
 }
-.scrollToTop:hover{
+.scrollToTop:hover
+{
 	text-decoration:none;
 }
-
 </style>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- bottom side -->
+<!-------------------------COPYRIGHT BLACK HEADER------------------------------------->
 <style>
 #footer
 {
@@ -147,14 +100,8 @@ div.fixed {
    padding:5px;
 }
 </style>
-
 <div id="footer">
 Copyright &copy; Mina Gadallah
 </div>
-
-
-
-
-
 </body>
 </html>
